# paxos

./: .gitignore  Cargo.toml  LICENSE  README.md
chatroom/: Cargo.toml
chatroom/src/: client.rs  lib.rs  main.rs  server.rs
harness/: Cargo.toml
harness/src/: command.rs  execution.rs  main.rs  server.rs  socket.rs
paxos/: Cargo.toml
paxos/src/: config.rs  external.rs  internal.rs  lib.rs  message.rs  shared.rs  socket.rs  state.rs  storage.rs  thread.rs
paxos/src/thread/: acceptor.rs  client.rs  commander.rs  leader.rs  peer.rs  replica.rs  scout.rs
src/: acceptor.rs  config.rs  constants.rs  lib.rs  message.rs  shared.rs  state.rs  thread.rs
src/thread/: acceptor.rs  client.rs  commander.rs  forward.rs  leader.rs  peer.rs  replica.rs  scout.rs
tests/: arbitrary.json  basic.json  failures.json  flood.json  functional.json  recover.json  safety.json  stress.json
