[package]
name = "paxos"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.25"
hashbrown = "0.1"
parking_lot = "0.7"
serde = "1.0"
serde_derive = "1.0"
tokio-serde-bincode = "0.2"
tokio = {version = "0.1.0", features = ["async-await-preview"]}
