[package]
name = "paxos"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.0"
futures = "0.1.25"
hashbrown = "0.1"
parking_lot = { version = "0.7", features = ["nightly"] }
serde = "1.0"
serde_derive = "1.0"
tokio-async-await = "0.1.4"
tokio-serde-bincode = "0.2"
tokio-serde-json = "0.2"
tokio = { version = "0.1.0", features = ["async-await-preview"] }
