[package]
name = "chatroom"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

[dependencies]
paxos = { path = "../paxos" }
serde = "1.0.82"
serde_derive = "1.0.82"
structopt = "0.2.14"
tokio = "0.1.13"
tokio-async-await = "0.1.4"
log = "0.4.6"
fern = "0.5.7"

[[bin]]
name = "chatroom-server"
path = "src/server.rs"

[[bin]]
name = "chatroom-client"
path = "src/client.rs"
