[package]
name = "harness"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

[dependencies]
chatroom = { path = "../chatroom" }
serde_json = "1.0.33"
serde_derive = "1.0.82"
serde = "1.0.82"
structopt = "0.2.14"
tokio-serde-bincode = "0.2.1"
bincode = "1.0.1"
tokio = { version = "0.1.13", features = ["async-await-preview"] }
futures = "0.1.25"
