[package]
name = "paxos"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

[dependencies]
bimap = "0.1.5"
bincode = "1.0"
derivative = "1.0.2"
futures = "0.1.25"
hashbrown = "0.1"
log = "0.4.6"
parking_lot = { version = "0.7", features = ["nightly"] }
serde = "1.0"
serde_derive = "1.0"
tokio-serde-bincode = "0.2"
tokio-serde-json = "0.2"
tokio = { version = "0.1.0", features = ["async-await-preview"] }
tap = "0.3.0"
rand = "0.6.1"
